added js. the game is now fully functional

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
       <p>Tic-Tac-Toe</p>
     </header>
     <div class="main-content">
+      <p id="announcement" class="hide">Player 1 Won!</p>
       <div id="gameGrid">
-        <button class="grid-btn">0</button>
-        <button class="grid-btn">1</button>
-        <button class="grid-btn">2</button>
-        <button class="grid-btn">3</button>
-        <button class="grid-btn">4</button>
-        <button class="grid-btn">5</button>
-        <button class="grid-btn">6</button>
-        <button class="grid-btn">7</button>
-        <button class="grid-btn">8</button>
+        <!-- col 1 -->
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
+        <!-- col 2 -->
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
+        <!-- col 3 -->
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
+        <button class="grid-btn"></button>
       </div>
       <button id="gridResetBtn">reset</button>
     </div>
